--- a/R/twitter_data.Rmd
+++ b/R/twitter_data.Rmd
@@ -16,9 +16,50 @@ library(stringr)
 
 ```
 
-## Impact of using hashtags
+```{r jr timeline, include = FALSE}
+jr_timeline = read.csv("C:/Users/dfs20/OneDrive - Newcastle University/Stage 2/Jumping Rivers/rtweet_analysis/Data/jr_timeline.csv")
 
-```{r #rstats, echo = FALSE}
+jr_timeline = jr_timeline %>%
+  filter(is_retweet == FALSE)
+jr_timeline = jr_timeline %>%
+  select(status_id, created_at, favorite_count, retweet_count, mentions_screen_name, urls_url, hashtags, media_type)
+jr_timeline$status_id = gsub("x", "", as.character(jr_timeline$status_id))
+
+hour = as.array(rep(0,nrow(jr_timeline)))
+for(i in 1:nrow(jr_timeline)){
+  hour[i] = substring(jr_timeline[i,2], 12, 13)
+  hour = gsub("^0+", "", as.character(hour))
+  jr_timeline = jr_timeline %>%
+    mutate(hour_posted = strtoi(hour), interactions = retweet_count + favorite_count)
+}
+```
+
+```{r time posted, include = FALSE}
+ggplot(jr_timeline) +
+  geom_bar(aes(hour_posted)) +
+  xlab("Hour Posted (24 hr)") +
+  ylab("Frequency")
+
+ggplot(jr_timeline) +
+  geom_smooth(aes(hour_posted, interactions))
+
+```
+
+```{r retweeters, include = FALSE}
+status_id = c(jr_timeline$status_id)
+retweeters = c(get_retweeters("1544677140653809664
+")$user_id)
+for(i in 2:69){
+  retweeters = append(retweeters, get_retweeters(status_id[i])$user_id)
+}
+
+retweeters_data = read.csv("C:/Users/dfs20/OneDrive - Newcastle University/Stage 2/Jumping Rivers/rtweet_analysis/Data/retweeters_list.csv")
+retweeters_data = retweeters_data %>%
+  select(location)
+
+```
+
+```{r hashtags, echo = FALSE}
 rstats = read.csv("C:/Users/dfs20/OneDrive - Newcastle University/Stage 2/Jumping Rivers/rtweet_analysis/Data/rstats_hashtag_tweets.csv")
 
 rstats = rstats %>%
@@ -41,41 +82,6 @@ ggplot(rstats) +
   ylab("Number of interactions")
   
 ```
-
-```{r jr timeline, include = FALSE}
-#no argument in get_timeline() for excluding retweets
-jr_timeline = read.csv("C:/Users/dfs20/OneDrive - Newcastle University/Stage 2/Jumping Rivers/rtweet_analysis/Data/jr_timeline.csv")
-
-jr_timeline = jr_timeline %>%
-  filter(is_retweet == FALSE & is_quote == FALSE)
-jr_timeline = jr_timeline %>%
-  select(status_id, created_at, favorite_count, retweet_count, mentions_screen_name, hashtags, media_type)
-jr_timeline$status_id = gsub("x", "", as.character(jr_timeline$status_id))
-
-hour = as.array(rep(0,nrow(jr_timeline)))
-for(i in 1:nrow(jr_timeline)){
-  hour[i] = substring(jr_timeline[i,2], 12, 13)
-  hour = gsub("^0+", "", as.character(hour))
-  jr_timeline = jr_timeline %>%
-    mutate(hour_posted = strtoi(hour), interactions = retweet_count + favorite_count)
-}
-```
-
-```{r retweeters, include = FALSE}
-status_id = c(jr_timeline$status_id)
-retweeters = c(get_retweeters("1544677140653809664
-")$user_id)
-for(i in 2:69){
-  retweeters = append(retweeters, get_retweeters(status_id[i])$user_id)
-}
-
-retweeters_data = read.csv("C:/Users/dfs20/OneDrive - Newcastle University/Stage 2/Jumping Rivers/rtweet_analysis/Data/retweeters_list.csv")
-retweeters_data = retweeters_data %>%
-  select(location)
-
-```
-
-
 
 
 
