Amended bar chart

--- a/R/twitter_data.Rmd
+++ b/R/twitter_data.Rmd
@@ -124,7 +124,8 @@ avg_interactions %>%
   ylab("Average Interactions") + 
   scale_fill_brewer(palette = "Dark2", 
                     name = "Source",
-                    labels = c("@jumping_uk", "#rstats"))
+                    labels = c("@jumping_uk", "#rstats")) +
+  theme_classic()
 
 
 ```
