--- a/R/twitter_data.Rmd
+++ b/R/twitter_data.Rmd
@@ -25,7 +25,7 @@ jr_timeline = read.csv("Data/jr_timeline.csv")
 
 jr_timeline %<>%
   filter(is_retweet == FALSE) %>%
-  select(status_id, created_at, favorite_count, retweet_count, mentions_screen_name, urls_url, hashtags, media_type) %>%
+  select(status_id, created_at, text, favorite_count, retweet_count, mentions_screen_name, urls_url, hashtags, media_type) %>%
   mutate(hour_posted = hour(created_at), 
          interactions = retweet_count + favorite_count,
          year = year(created_at))
@@ -38,6 +38,35 @@ ggplot(jr_timeline, aes(year)) +
   theme_classic() +
   xlab("Year") +
   ylab("Number of Tweets")
+
+tweet_words = unnest_tokens(
+  tbl = jr_timeline,
+  output = word,
+  input = text
+)
+
+custom_stop_words = c("t.co", "https" , "0001f40d", "fe0f",
+                      "2728", "0001f389", "ukhkqhxhwg", "custom",
+                      "upcoming", "time", "newcastle", "jumping",
+                      "rivers", "north", "team", "amp", "check",
+                      "east", "csgillespie", "info", "read", "â",
+                      "mcmc_stan")
+tweet_words = anti_join(tweet_words, 
+                        stop_words, 
+                        by = "word")
+tweet_words %<>%
+  select(word)
+
+word_counts = count(tweet_words, word, sort = TRUE)
+word_counts = filter(word_counts,
+                     !(word %in% custom_stop_words))
+
+word_counts %>%
+  slice_max(n, n = 20) %>%
+  ggplot(aes(label = word, size = n)) + 
+  geom_text_wordcloud() +
+  scale_size_area(max_size = 10) +
+  theme_void()
 ```
 
 ```{r #rstats, include = FALSE}
